WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11778
CString::data() should be documented as returning a null terminated char array
https://bugs.webkit.org/show_bug.cgi?id=11778
Summary
CString::data() should be documented as returning a null terminated char array
Darin Fisher (:fishd, Google)
Reported
2006-12-07 14:59:05 PST
CString::data() should be documented as returning a null terminated char array
Attachments
patch
(922 bytes, patch)
2006-12-07 16:57 PST
,
Darin Fisher (:fishd, Google)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Fisher (:fishd, Google)
Comment 1
2006-12-07 16:57:57 PST
Created
attachment 11768
[details]
patch OK, I added a brief comment above the class decl.
Darin Adler
Comment 2
2006-12-07 17:03:13 PST
Comment on
attachment 11768
[details]
patch r=me
Alexey Proskuryakov
Comment 3
2006-12-08 10:56:18 PST
Committed revision 18080.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug