2006-12-08  MorganL  <morganl.webkit@yahoo.com>

Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=11778
        CString::data() should be documented as returning a null terminated char array

        * platform/CString.h:
        Add some basic documentation to CString.h



Canonical link: https://commits.webkit.org/15169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18080 268f45cc-cd09-0410-ab3c-d52691b4dbfc